--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -1,2 +1,2 @@
-<a href="{{ site.baseurl }}/about/">About</a>
-<a href="{{ site.baseurl }}/contact/">Contact</a>
+<a href="{{ site.baseurl }}/about/">Über</a>
+<a href="{{ site.baseurl }}/contact/">Kontakt</a>
