Minor changes to static content.

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -29,6 +29,9 @@ layout: default
 
         {{ content }}
 
+        Foto von <a href="https://unsplash.com/de/@pavstyuk?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Mikhail Pavstyuk</a> auf <a href="https://unsplash.com/de/fotos/EKy2OTRPXdw?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Unsplash</a>
+  
+
         <!-- Home Post List -->
         {% for post in site.posts limit : 5 %}
 
@@ -41,14 +44,14 @@ layout: default
             <h3 class="post-subtitle">{{ post.excerpt | strip_html | truncatewords: 15 }}</h3>
             {% endif %}
           </a>
-          <p class="post-meta">Posted by
+          <p class="post-meta">Veröffentlicht von
             {% if post.author %}
             {{ post.author }}
             {% else %}
             {{ site.author }}
             {% endif %}
-            on
-            {{ post.date | date: '%B %d, %Y' }} &middot; {% include read_time.html content=post.content %}            
+            am
+            {{ post.date | date: '%B %d, %Y' }} &middot; <br> {% include read_time.html content=post.content %}            
           </p>
         </article>
 
