--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -15,11 +15,13 @@
           <a class="nav-link" href="{{"/about" | relative_url }}">Über</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="{{ "/posts" | relative_url }}">Posts</a>
+          <a class="nav-link" href="{{ "/posts" | relative_url }}">Alle Posts</a>
         </li>
+        <!--
         <li class="nav-item">
           <a class="nav-link" href="{{"/contact" | relative_url }}">Kontakt</a>
         </li>
+        -->
       </ul>
     </div>
   </div>
